--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,7 +1,13 @@
+-- global styles
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     text-decoration: none;
     border-style: none;
+}
+
+body{
+    width: 100%;
+    font-size: 62.5% ;
 }
