--- a/web/src/index.css
+++ b/web/src/index.css
@@ -7,4 +7,14 @@
 body {
     width: 100%;
     font-size: 62.5%;
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+}
+  
+  
