--- a/frontend/src/components/InputField/style.css
+++ b/frontend/src/components/InputField/style.css
@@ -8,3 +8,17 @@
 .label{
     font-family: 'Source Pro';
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid #8b5cf6;
+  -webkit-text-fill-color: #d946ef;
+  transition: background-color 5000s ease-in-out 0s;
+}
